# android_files_backup

./: CMakeLists.txt  README.md
include/android_files_backup/: adb_client.h  adb_device.h  process_runner.h  utils.h
include/android_files_backup/adb/: adb_client.h  adb_device.h
include/android_files_backup/application/: application_controller.h
include/android_files_backup/backup/: backup_progress.h  backup_service.h
include/android_files_backup/errors/: exceptions.h
include/android_files_backup/process/: process_runner.h
include/android_files_backup/result/: result.h
include/android_files_backup/ui/: cli_application.h
include/android_files_backup/utils/: utils.h
src/: adb_client.cpp  adb_device.cpp  main.cpp  process_runner.cpp  utils.cpp
src/adb/: adb_client.cpp  adb_device.cpp
src/application/: application_controller.cpp
src/backup/: backup_service.cpp
src/process/: process_runner.cpp
src/result/: result.cpp
src/ui/: cli_application.cpp
src/utils/: utils.cpp
